# AAU

./: LICENSE  a.code-workspace  aflopg6.c  biggestDivisorTwoInt  biggestDivisorTwoInt.c  hvorerdubro.c  opg4.1  sumNumIntervalWithWhile.c
2InternetværkogWebprogrammering/: array.js  smh.js
Compiler/: Compiler.csproj  Compiler.sln  Program.cs
CompilerP4/: Compiler.csproj  Compiler.sln  Program.cs
Datalogi_1semester/: mergeSort  mergeSort.c
Eksamensopgaver/: Accumulator  Fodboldturnering  Fodboldturnering.c  Yatzy  Yatzy.c
L10/: longestEndingTwoWords.c  pluralNavneord.c  reverseStr.c
L11/: app.c
L12/: app.c  grepFunction.c  matrice.txt  my-file.txt  personkartotek.c
L13/: Palindromer  Palindromer.c  app  app.c  divRecursive.c  fibonacci.c  strcmp  strcmp.c
L2/: mowLawn.c  pythagoras.c  secToHours.c  secToWeeks.c  test.c
L3/: circleK.c  secsToHours.c
L5/: app.c  leapYear.c  populationGrowth_opg5.7.c
L6/: default.workspace  default.workspace.layout
L7/: Afl6_ArealUnderGrafFunc.c  Opg 8.1 En tilfældig menu.c
L8/: 7.2_TestSecsToWeeks  7.2_TestSecsToWeeks.c
L9/: 9.2_Polynomier.c  9.4_bsort.c  9.5_dynamiskAllokeringOgQsort.c  9.8_Mult_dice.c  tempCodeRunnerFile.c  trying  workspace.code-workspace  yatzyMedMangeTerninger  yatzyMedMangeTerninger.c
Lektion 4/: solveQuadraticEquation
Lektion 5/: addIntsToSomething_opg5.7  addIntsToSomething_opg5.7.c
Models/: Whitebox_run.ipynb
P1 Project Plusbus/: hvorerdubro.c
ProgrammingParadigms/: Exam-example.hs  Exam-example2.hs  Exercises10.hs  Exercises11.hs  Exercises12.hs  Exercises13.hs  (+11 more)
SelectedTopicsInProgramming/: CMakeLists.txt
SelectedTopicsInProgramming/ExamProject/: CMakeLists.txt  Vessel.cpp  Vessel.h  createGraph.py  definitions.cpp  genericSymbolTable.cpp  genericSymbolTable.h  main.cpp  main_bm.cpp  networkGraph.cpp  networkGraph.h  peakHospitalizationObserver.cpp  peakHospitalizationObserver.h  reaction.cpp  reaction.h  reactor.cpp  reactor.h  runner.cpp  runner.h  simulation.cpp  simulation.h  threadPool.h  trajectory.csv  unitTests.cpp
SelectedTopicsInProgramming/ExamProject/figures/: COVID19_SEIHR__10000Trajectory.csv  Circadian_RhythmTrajectory.csv  figure1bTrajectory.csv
SelectedTopicsInProgramming/L1/: CMakeLists.txt  E2.cpp  E3.cpp
SelectedTopicsInProgramming/L2/: CMakeLists.txt  E1.cpp  E2.cpp  E3.cpp  E4.cpp  E5.cpp  benchmark_util.h
SelectedTopicsInProgramming/L3/: CMakeLists.txt  Wordle.cpp
SelectedTopicsInProgramming/L3/polygon/: CMakeLists.txt  README.md  polygon.cpp  polygon.hpp  polygon_test.cpp
SelectedTopicsInProgramming/L4/: CMakeLists.txt  point.hpp  polyline.cpp  polyline.hpp  polyline_test.cpp
SelectedTopicsInProgramming/L5/: CMakeLists.txt  main.cpp  polymorphism.h
SelectedTopicsInProgramming/L5.5_extended/: README.md  evaluate.cpp  print.cpp  print.hpp  print_test.cpp  terms_test.cpp  visitor.hpp
SelectedTopicsInProgramming/L6/: CMakeLists.txt  terms.cpp
SelectedTopicsInProgramming/L6/calculator-solution/: CMakeLists.txt  calculator.hpp  calculator_test.cpp  evaluate.hpp  expressions.cpp  expressions.hpp  expressions_test.cpp  terms.cpp  terms.hpp
SelectedTopicsInProgramming/L7/: CMakeLists.txt  main.cpp
SelectedTopicsInProgramming/L8/: CMakeLists.txt  exercise1.cpp
SelectedTopicsInProgramming/L9/: CMakeLists.txt  exercises.cpp
(+207 files in other folders)
